fixed icons on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,6 @@ code {
     font-size: 10px;
   }
   .icon {
-    padding-bottom: 40px;
     width: 5vmin;
     height: 5vmin;
   }
